Add required test JVM arguments for JVM 24+